--- a/HTML/Work2Variant/styles/mainStyles.css
+++ b/HTML/Work2Variant/styles/mainStyles.css
@@ -4,6 +4,11 @@
 }
 body{
     background-color: white;
+    padding: 0;
+    margin: 0;
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', sans-serif;
+    font-style: normal;
 }
 a{
     color: black;
