Please enter the commit message for your changes. Lines starting  with '' will be ignored, and an empty message aborts the commit.
 On branch main
 Your branch is up to date with 'origin/main'.

 Changes to be committed:
	deleted:    C++/test.cpp
	deleted:    C++/test0.cpp
	modified:   HTML/Work2Variant/styles/mainStyles.css
	deleted:    "HTML/\320\272\321\200_1_\320\260\320\277\321\200\320\265\320\273\321\217/blogs.html"
	deleted:    "HTML/\320\272\321\200_1_\320\260\320\277\321\200\320\265\320\273\321\217/blogsStyle.css"
	deleted:    "HTML/\320\272\321\200_1_\320\260\320\277\321\200\320\265\320\273\321\217/index.html"
	deleted:    "HTML/\320\272\321\200_1_\320\260\320\277\321\200\320\265\320\273\321\217/indexStyle.css"
	deleted:    "HTML/\320\272\321\200_1_\320\260\320\277\321\200\320\265\320\273\321\217/products.html"
	deleted:    "HTML/\320\272\321\200_1_\320\260\320\277\321\200\320\265\320\273\321\217/productsStyle.css"
	deleted:    Python/test_pyqt0.py
	deleted:    React/calculator_react/.gitignore
	deleted:    React/calculator_react/README.md
	deleted:    React/calculator_react/package-lock.json
	deleted:    React/calculator_react/package.json
	deleted:    React/calculator_react/public/favicon.ico
	deleted:    React/calculator_react/public/index.html
	deleted:    React/calculator_react/public/logo192.png
	deleted:    React/calculator_react/public/logo512.png
	deleted:    React/calculator_react/public/manifest.json
	deleted:    React/calculator_react/public/robots.txt
	deleted:    React/calculator_react/src/App.css
	deleted:    React/calculator_react/src/App.js
	deleted:    React/calculator_react/src/App.test.js
	deleted:    React/calculator_react/src/index.css
	deleted:    React/calculator_react/src/index.js
	deleted:    React/calculator_react/src/logo.svg
	deleted:    React/calculator_react/src/reportWebVitals.js
	deleted:    React/calculator_react/src/setupTests.js

--- a/HTML/Work2Variant/styles/mainStyles.css
+++ b/HTML/Work2Variant/styles/mainStyles.css
@@ -45,7 +45,7 @@ a{
     align-items: center;
     justify-content: center;
     width: 30%;
-        border: 2px solid black;
+        border: 2px solid red;
 }
 .search{
     display: flex;
