--- a/HTML/Work2Variant/styles/mainStyles.css
+++ b/HTML/Work2Variant/styles/mainStyles.css
@@ -6,7 +6,7 @@ body {
 	background-color: white;
 	padding: 0;
 	margin: 0;
-	font-size: 20px;
+	font-size: 17px;
 	font-family: 'Franklin Gothic Medium', sans-serif;
 	font-style: normal;
 }
@@ -19,68 +19,102 @@ a {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	border: 2px solid black;
+	width:100%;
+	height: 80px;
 }
 .logo {
-	width: 30%;
-	border: 2px solid black;
+	width: 25%;
+	font-size: 20px;
+	font-family: 'Franklin Gothic Medium', sans-serif;
+	font-weight: bolder;
 }
 .nav {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	width: 60%;
-	border: 2px solid black;
+	width: 55%;
+	
 }
 .navbuttons {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	justify-content: space-evenly;
+	justify-content: center;
 	width: 50%;
-	border: 2px solid black;
+	gap: 10%;
 }
 .navbutton {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 30%;
-	border: 2px solid red;
+	width: 10%;
+	height: 100%;
 }
 .search {
 	display: flex;
 	align-items: center;
+	justify-content: space-between;
+	width: 40%;
+	height: 30px;
+	margin-left: -5%;
+	border: 1px solid rgb(219, 219, 219);
+	border-radius: 30px;
+	background-color: rgb(240, 240, 240);
+}
+.searchtext{
+	font-family: Arial, Helvetica, sans-serif;
+	margin-left: 5%;
+	line-height: 1%;
+	font-size: 15px;
+	color: rgb(170, 170, 170);
+}
+.searchbutton{
+	display: flex;
 	justify-content: center;
-	width: 50%;
-	border: 2px solid black;
+	align-items: center;
+	width: 10%;
+	height: 100%;
+	border-radius: 0 30px 30px 0;
+	background-color: red;
 }
 .cart {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 5%;
-	border: 2px solid black;
+	width: 2.25%;
+	height: 50%;
+	margin-left: 1%;
+	border: 2px dashed black;
+}
+.like {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 2.25%;
+	height: 50%;
+	margin-left: 0.5%;
+	border: 2px dashed black;
 }
 .login {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	width: 10%;
-	border: 2px solid black;
+	margin-left: 2%;
 }
 
 .footer {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	border: 2px solid black;
+	
 }
 .nameCO {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	width: 30%;
-	border: 2px solid black;
+	
 }
 .navFooter {
 	display: flex;
@@ -88,26 +122,26 @@ a {
 	justify-content: space-around;
 	align-items: center;
 	width: 40%;
-	border: 2px solid black;
+	
 }
 .contacts {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
 	width: 30%;
-	border: 2px solid black;
+	
 }
 .contact {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	width: 40%;
-	border: 2px solid black;
+	
 }
 .map {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	width: 60%;
-	border: 2px solid black;
+	
 }
