--- a/HTML/Work2Variant/styles/indexStyle.css
+++ b/HTML/Work2Variant/styles/indexStyle.css
@@ -1,106 +1,120 @@
-.main{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
+.main {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	align-items: center;
 }
-.mainName{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: auto;
-    margin-top: 0.5%;
+.mainName {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: auto;
+	margin-top: 0.5%;
 }
-.nameCompany{
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 50%;
-    height: 50%;
+.nameCompany {
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	width: 50%;
+	height: 50%;
 }
-#nameCompany1{
-    font-size: 70px;
+#nameCompany1 {
+	font-size: 70px;
 }
-#nameCompany2{
-    text-align: center;
-    width: 40%;
-    margin-top: 1%;
-    font-size: 20px;
+#nameCompany2 {
+	text-align: center;
+	width: 40%;
+	margin-top: 1%;
+	font-size: 20px;
 }
-.nameIMG{
-    width: 100%;
-    height: 700px;
-    background-color: grey;
+.nameIMG {
+	width: 100%;
+	height: 700px;
+	background-color: grey;
 }
-.slider{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 77.5%;
-    height: auto;
-    margin-top: 5%;
+.slider {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 77.5%;
+	height: auto;
+	margin-top: 5%;
 }
-.swiper{
-    margin-top: 2.5%;
-    width: 100%;
-    height: 500px;
+.swiper {
+	margin-top: 2.5%;
+	width: 100%;
+	height: 500px;
 }
-#swiperText1{
-    font-size: 60px;
+#swiperText1 {
+	font-size: 60px;
 }
-#swiperText2{
-    text-align: center;
-    width: 60%;
-    font-size: 18px;
-    margin-top: 1%;
+#swiperText2 {
+	text-align: center;
+	width: 60%;
+	font-size: 18px;
+	margin-top: 1%;
 }
-.swiper-slide{
-    background-color: grey;
+.swiper-slide {
+	background-color: grey;
 }
-.News{
-    display: flex;
-    flex-direction: column;
-    margin-top: 2.5%;
-    width: 60%;
-    border: 2px dashed black;
+.News {
+	display: flex;
+	flex-direction: column;
+	margin-top: 2.5%;
+	width: 60%;
+	font-size: 40px;
 }
-.newInfo{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    margin: 0.5% 0 0.5% 0;
+.newInfo {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+	width: 100%;
+	height: 75px;
+	margin: 0.5% 0 0.5% 0;
+	font-size: 20px;
+	border: 2px dashed black;
 }
-.newtext{
-    width: 80%;
+.newtext {
+	width: 90%;
+	height: 100%;
 }
-.newbuttons{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
-    width: 20%;
+.newbuttons {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-evenly;
+	width: 10%;
+	height: 50%;
 }
-.relations{
-    display: flex;
-    flex-direction: column;
-    width: 60%;
-    margin-top: 2.5%;
-    border: 2px solid black;
+.likebut {
+	width: 35%;
+	height: 100%;
+	border: 2px dashed black;
 }
-.relate{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 60%;
-    background-color: aqua;
-    margin: 1%;
+.morebut {
+	width: 35%;
+	height: 100%;
+	border: 2px dashed black;
 }
-#rel2{
-    margin-left: 40%;
+.relations {
+	display: flex;
+	flex-direction: column;
+	width: 60%;
+	margin-top: 2.5%;
+	border: 2px solid black;
 }
-
+.relate {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	width: 60%;
+	background-color: aqua;
+	margin: 1%;
+}
+#rel2 {
+	margin-left: 40%;
+}
