--- a/HTML/Work2Variant/styles/mainStyles.css
+++ b/HTML/Work2Variant/styles/mainStyles.css
@@ -107,7 +107,8 @@ a {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	
+	height: 150px;
+	margin-top: 2.5%;
 }
 .nameCO {
 	display: flex;
