--- a/HTML/Work2Variant/styles/blogsStyle.css
+++ b/HTML/Work2Variant/styles/blogsStyle.css
@@ -1,16 +1,18 @@
-body{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
 .main{
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    width: 80%;
+    justify-content: center;
+    width: 100%;
     height: 500px;
     margin-top: 2.5%;
+}
+.container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 80%;
+    height: 100%;
 }
 .mainBlog{
     display: flex;
