--- a/HTML/Work2Variant/styles/mainStyles.css
+++ b/HTML/Work2Variant/styles/mainStyles.css
@@ -107,6 +107,7 @@ a {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+	justify-content: space-between;
 	height: 150px;
 	margin-top: 2.5%;
 }
