modified:   HTML/Work2Variant/catalog.html 	modified:   HTML/Work2Variant/index.html 	modified:   HTML/Work2Variant/info.html 	new file:   HTML/Work2Variant/scripts/scriptCatalog.js 	modified:   HTML/Work2Variant/styles/blogsStyle.css 	modified:   HTML/Work2Variant/styles/catalogStyle.css 	modified:   HTML/Work2Variant/styles/infoStyle.css 	new file:   HTML/Work2Variant/styles/swiper-bundle.min.css

--- a/HTML/Work2Variant/styles/infoStyle.css
+++ b/HTML/Work2Variant/styles/infoStyle.css
@@ -29,6 +29,15 @@
     width: 39%;
     height: 100%;
 }
+#nameCompany-text1{
+    font-size: 70px;
+}
+#nameCompany-text2{
+	text-align: center;
+	width: 80%;
+	margin-top: 1%;
+	font-size: 20px;
+}
 .mapCompany{
     width: 59%;
     height: 100%;
@@ -58,7 +67,7 @@
     height: 100%;
 }
 .soc{
-    width: 11%;
-    height: 60%;
+    width: 9.5%;
+    height: 50%;
     border: 2px dashed black;
 }
