--- a/HTML/Work2Variant/styles/blogsStyle.css
+++ b/HTML/Work2Variant/styles/blogsStyle.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 500px;
+    height: 26vw;
     margin-top: 2.5%;
 }
 .container{
@@ -93,7 +93,7 @@
     z-index: -1;
     position: absolute;
     width: 31%;
-    height: 18%;
+    height: 9vw;
     border: 2px solid red;
 }
 .newBlog-buttons{
