--- a/HTML/Work2Variant/styles/indexStyle.css
+++ b/HTML/Work2Variant/styles/indexStyle.css
@@ -19,20 +19,22 @@
 	align-items: center;
 	flex-direction: column;
 	width: 50%;
-	height: 50%;
+	min-width: 320px;
+	height: 30vw;
 }
 #nameCompany1 {
-	font-size: 70px;
+	font-size: clamp(24px, 3.5vw, 70px);
 }
 #nameCompany2 {
 	text-align: center;
-	width: 40%;
+	width: 60%;
 	margin-top: 1%;
-	font-size: 20px;
+	font-size: clamp(12px, 1vw, 20px);
 }
 .nameIMG {
 	width: 100%;
-	height: 700px;
+	height: 35vw;
+	min-height: 35vh;
 	background-color: grey;
 }
 .slider {
@@ -40,21 +42,23 @@
 	flex-direction: column;
 	align-items: center;
 	width: 77.5%;
+	min-width: 310px;
 	height: auto;
 	margin-top: 5%;
 }
 .swiper {
 	margin-top: 2.5%;
 	width: 100%;
-	height: 500px;
+	height: 25vw;
+	min-height: 17.5vh;
 }
 #swiperText1 {
-	font-size: 60px;
+	font-size:clamp(20px, 3vw, 60px);
 }
 #swiperText2 {
 	text-align: center;
 	width: 60%;
-	font-size: 18px;
+	font-size:clamp(10px, 1vw, 18px);
 	margin-top: 1%;
 }
 .swiper-slide {
@@ -65,7 +69,8 @@
 	flex-direction: column;
 	margin-top: 2.5%;
 	width: 60%;
-	font-size: 40px;
+	min-width: 280px;
+	font-size:clamp(16px, 2vw, 40px);
 }
 .newInfo {
 	display: flex;
@@ -73,10 +78,12 @@
 	align-items: center;
 	justify-content: space-between;
 	width: 100%;
-	height: 75px;
+	/* min-width: 280px; */
+	height: 3.5vw;
+	min-height: 3vh;
 	margin: 0 0 0 0;
-	font-size: 20px;
-/*	box-shadow: 0px 1px 2px 0px black;*/
+	font-size: clamp(13px, 1vw, 20px);
+	/*	box-shadow: 0px 1px 2px 0px black;*/
 	border-bottom: 3px solid black;
 }
 .newtext {
@@ -105,6 +112,7 @@
 	display: flex;
 	flex-direction: column;
 	width: 55%;
+	min-width: 280px;
 	margin-top: 2.5%;
 }
 .relate {
@@ -112,8 +120,9 @@
 	flex-direction: column;
 	align-items: center;
 	width: 60%;
+	/* min-width: 280px; */
 	margin: 2.5%;
-	font-size: 20px;
+	font-size:clamp(12px, 1vw, 20px);
 }
 .rateR{
 	width: 100%;
@@ -124,8 +133,9 @@
 .textR{
 	width: 99%;
 	height: 100%;
-	font-size: 16px;
+	font-size:clamp(10px, 1vw, 16px);
 }
 #rel2 {
+	/* margin-left: clamp(0%, 1vw, 40%); */
 	margin-left: 40%;
 }
