--- a/HTML/Work2Variant/styles/mainStyles.css
+++ b/HTML/Work2Variant/styles/mainStyles.css
@@ -6,7 +6,7 @@ body {
 	background-color: white;
 	padding: 0;
 	margin: 0;
-	font-size: 17px;
+	font-size:clamp(12px, 1vw, 17px);
 	font-family: 'Franklin Gothic Medium', sans-serif;
 	font-style: normal;
 }
@@ -33,7 +33,7 @@ a {
 	flex-direction: row;
 	align-items: center;
 	width: 55%;
-	
+	height: 100%;
 }
 .navbuttons {
 	display: flex;
@@ -42,12 +42,13 @@ a {
 	justify-content: center;
 	width: 50%;
 	gap: 10%;
+	height: 100%;
 }
 .navbutton {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 10%;
+	width: 30%;
 	height: 100%;
 }
 .search {
@@ -55,8 +56,7 @@ a {
 	align-items: center;
 	justify-content: space-between;
 	width: 40%;
-	height: 30px;
-	margin-left: -5%;
+	height:clamp(20px, 3vw, 35px);
 	border: 1px solid rgb(219, 219, 219);
 	border-radius: 30px;
 	background-color: rgb(240, 240, 240);
@@ -65,7 +65,7 @@ a {
 	font-family: Arial, Helvetica, sans-serif;
 	margin-left: 5%;
 	line-height: 1%;
-	font-size: 15px;
+	font-size:clamp(10px, 1vw, 15px);
 	color: rgb(170, 170, 170);
 }
 .searchbutton{
