--- a/HTML/Work2Variant/styles/catalogStyle.css
+++ b/HTML/Work2Variant/styles/catalogStyle.css
@@ -1,206 +1,304 @@
-.main {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: 100%;
+@media screen and (min-width: 1024px) {
+	.product {
+		display: flex;
+		flex-direction: column;
+
+		width: 60%;
+		margin-left: 20%;
+		margin-top: 0.5%;
+		padding-bottom: 2.5%;
+	}
+	.product_row {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+
+		margin-top: 2.5%;
+	}
+	.product_cart {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+
+		width: 45%;
+
+		background-color: white;
+		border-radius: 10px;
+		box-shadow: 0px 3px 2px #00000036;
+
+		overflow: hidden;
+	}
+	.product_img {
+		width: 100%;
+		padding: 2.5% 0;
+	}
+	.product_text {
+		width: 80%;
+		padding: 2.5% 0;
+
+		font-size: 12px;
+	}
+	.product_name {
+		display: flex;
+		justify-content: center;
+
+		font-size: 20px;
+	}
+	.product_price {
+		display: flex;
+		justify-content: center;
+
+		width: 80%;
+		padding: 2.5% 0;
+
+		border-top: 2px solid #cc3629;
+
+		font-size: 16px;
+	}
 }
-.products {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: 100%;
+
+@media screen and (max-width: 1023px) {
+	.product {
+		display: flex;
+		flex-direction: column;
+
+		width: 60%;
+		margin-left: 20%;
+		margin-top: 0.5%;
+		padding-bottom: 2.5%;
+	}
+	.product_row {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+
+		margin-top: 2.5%;
+	}
+	.product_cart {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+
+		width: 45%;
+
+		background-color: white;
+		border-radius: 10px;
+		box-shadow: 0px 3px 2px #00000036;
+
+		overflow: hidden;
+	}
+	.product_img {
+		width: 100%;
+		padding: 2.5% 0;
+	}
+	.product_text {
+		width: 80%;
+		padding: 2.5% 0;
+
+		font-size: 10px;
+	}
+	.product_name {
+		display: flex;
+		justify-content: center;
+
+		font-size: 18px;
+	}
+	.product_price {
+		display: flex;
+		justify-content: center;
+
+		width: 80%;
+		padding: 2.5% 0;
+
+		border-top: 2px solid #cc3629;
+
+		font-size: 14px;
+	}
 }
-.color {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: 100%;
-	margin-top: 1.75%;
+@media screen and (max-width: 767px) {
+	.product {
+		display: flex;
+		flex-direction: column;
+
+		width: 60%;
+		margin-left: 20%;
+		margin-top: 0.5%;
+		padding-bottom: 2.5%;
+	}
+	.product_row {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+		flex-wrap: wrap;
+		margin-left: -5px;
+		margin-top: 0px;
+	}
+	.product_cart {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+
+		width: 45%;
+		min-width: 185px;
+		margin-top: 5px;
+		margin-left: 5px;
+
+		background-color: white;
+		border-radius: 10px;
+		box-shadow: 0px 3px 2px #00000036;
+
+		overflow: hidden;
+	}
+	.product_img {
+		width: 100%;
+		padding: 2.5% 0;
+	}
+	.product_text {
+		width: 80%;
+		padding: 2.5% 0;
+
+		font-size: 10px;
+	}
+	.product_name {
+		display: flex;
+		justify-content: center;
+
+		font-size: 16px;
+	}
+	.product_price {
+		display: flex;
+		justify-content: center;
+
+		width: 80%;
+		padding: 2.5% 0;
+
+		border-top: 2px solid #cc3629;
+
+		font-size: 12px;
+	}
 }
-.paste {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: 100%;
-	margin-top: 1.75%;
+@media screen and (max-width: 624px) {
+	.product {
+		display: flex;
+		flex-direction: column;
+
+		width: 60%;
+		margin-left: 20%;
+		margin-top: 0.5%;
+		padding-bottom: 2.5%;
+	}
+	.product_row {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+		flex-wrap: wrap;
+		/*margin-left: -5px;
+        margin-top: 0px;*/
+	}
+	.product_cart {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+
+		width: 90%;
+		/*min-width: 185px;
+        margin-top: 5px;
+        margin-left: 5px;*/
+
+		background-color: white;
+		border-radius: 10px;
+		box-shadow: 0px 3px 2px #00000036;
+
+		overflow: hidden;
+	}
+	.product_img {
+		width: 100%;
+		padding: 2.5% 0;
+	}
+	.product_text {
+		width: 80%;
+		padding: 2.5% 0;
+
+		font-size: 10px;
+	}
+	.product_name {
+		display: flex;
+		justify-content: center;
+
+		font-size: 16px;
+	}
+	.product_price {
+		display: flex;
+		justify-content: center;
+
+		width: 80%;
+		padding: 2.5% 0;
+
+		border-top: 2px solid #cc3629;
+
+		font-size: 12px;
+	}
 }
-.tool {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: 100%;
-	margin-top: 1.75%;
-}
-.grunt {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: 100%;
-	margin-top: 1.75%;
-}
-.nameBlock {
-	display: flex;
-	align-items: center;
-	width: 72.5%;
-}
-.altnameBlock {
-	display: flex;
-	align-items: center;
-	width: 63%;
-}
-.buttonBlock {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: center;
-	width: 100%;
-	margin-top: 0.5%;
-}
-.altbuttonBlock {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: center;
-	width: 100%;
-	margin-top: 0.5%;
-}
-.ProductRow {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-around;
-	width: 80%;
-    height: 25vw;
-	margin-top: 0.75%;
-}
-.P {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: 27.5%;
-	height: 100%;
-	background-color: lightgrey;
-}
-.PIMG {
-	width: 100%;
-    height: 75%;
-	background-color: gray;
-}
-.PTEXT {
-	width: 80%;
-    height: 15%;
-}
-.PCART {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-between;
-	width: 80%;
-    height: 10%;
-}
-.pcartLike{
-    width: 11%;
-    height: 80%;
-    border: 2px dashed black;
-}
-.pcartCart{
-    width: 11%;
-    height: 80%;
-    margin-right: 40%;
-    border: 2px dashed black;
-}
-.pcartBUY{
-    width: 30%;
-    height: 80%;
-    border: 2px dashed black;
-}
-.acces {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: 100%;
-	margin-top: 1.75%;
-}
-.swiper{
-    width: 67.5%;
-    height: 20vw;
-}
-.swiper-slide {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	width: 100%;
-	height: 100%;
-	margin-top: 0.75%;
-	background-color: lightgrey;
-}
-.accesPIMG {
-	width: 50%;
-	height: 100%;
-	background-color: gray;
-}
-.accesPTEXT {
-	width: 37.5%;
-	height: 90%;
-}
-.accesPCART {
-	display: flex;
-	flex-direction: column;
-	align-items: end;
-	justify-content: space-between;
-	width: 10%;
-	height: 80%;
-}
-.accespcartLike{
-    width: 35%;
-    height: 14%;
-    border: 2px dashed black;
-}
-.accespcartCart{
-    width: 35%;
-    height: 14%;
-    margin-top: -100%;
-    border: 2px dashed black;
-}
-.accespcartBUY{
-    width: 70%;
-    height: 17.5%;
-    border: 2px dashed black;
-}
-.palit {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: 100%;
-	margin-top: 1.75%;
-}
-.palitProductRow {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-around;
-	width: 70%;
-	margin-top: 0.75%;
-}
-.palitP {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	width: 30%;
-	height: 100px;
-	background-color: darkgrey;
-}
-.palitPIMG {
-	width: 100%;
-	height: 100%;
-	background-color: red;
-}
-.palitPCART {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-around;
-	width: 90%;
-	background-color: cadetblue;
+
+@media screen and (max-width: 400px) {
+	.product {
+		display: flex;
+		flex-direction: column;
+
+		width: 60%;
+		margin-left: 20%;
+		margin-top: 0.5%;
+		padding-bottom: 2.5%;
+	}
+	.product_row {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+		flex-wrap: wrap;
+		/*margin-left: -5px;
+        margin-top: 0px;*/
+	}
+	.product_cart {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+
+		width: 90%;
+		/*min-width: 185px;
+        margin-top: 5px;
+        margin-left: 5px;*/
+
+		background-color: white;
+		border-radius: 10px;
+		box-shadow: 0px 3px 2px #00000036;
+
+		overflow: hidden;
+	}
+	.product_img {
+		width: 100%;
+		padding: 2.5% 0;
+	}
+	.product_text {
+		width: 80%;
+		padding: 2.5% 0;
+
+		font-size: 10px;
+	}
+	.product_name {
+		display: flex;
+		justify-content: center;
+
+		font-size: 16px;
+	}
+	.product_price {
+		display: flex;
+		justify-content: center;
+
+		width: 80%;
+		padding: 2.5% 0;
+
+		border-top: 2px solid #cc3629;
+
+		font-size: 12px;
+	}
 }
