--- a/HTML/Work2Variant/styles/infoStyle.css
+++ b/HTML/Work2Variant/styles/infoStyle.css
@@ -17,29 +17,30 @@
 }
 .row-name_map{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 80%;
 }
 .nameCompany{
     display: flex;
     flex-direction: column;
     width: 39%;
-    height: 100%;
+    min-width: 310px;
 }
 #nameCompany-text1{
-    font-size: 70px;
+    font-size: clamp(34px, 3.5vw, 70px);
 }
 #nameCompany-text2{
 	text-align: center;
 	width: 80%;
 	margin-top: 1%;
-	font-size: 20px;
+	font-size: clamp(14px, 1vw, 20px);
 }
 .mapCompany{
     width: 59%;
+    min-width: 310px;
     height: 100%;
     background-color: gray;
 }
@@ -70,4 +71,83 @@
     width: 9.5%;
     height: 50%;
     border: 2px dashed black;
+}
+
+@media screen and (max-width: 1080px){
+.main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-top: 5%;
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+.row-name_map{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    min-width: 280px;
+}
+.nameCompany{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    min-width: 280px;
+}
+#nameCompany-text1{
+    font-size: clamp(34px, 3.5vw, 70px);
+}
+#nameCompany-text2{
+	text-align: center;
+	width: 80%;
+	margin-top: 1%;
+	font-size: clamp(14px, 1vw, 20px);
+}
+.mapCompany{
+    width: 59%;
+    min-width: 280px;
+    height: 75vw;
+    max-height: 50vh;
+    background-color: gray;
+}
+.contacts{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 10%;
+    min-width: 280px;
+    margin-top:10%;
+}
+.all{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 30%;
+    height: 100%;
+}
+.socialSites{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 40%;
+    height: 100%;
+}
+.soc{
+    width: 15%;
+    height: 50%;
+    border: 2px dashed black;
+}
 }
