--- a/HTML/Work2Variant/styles/indexStyle.css
+++ b/HTML/Work2Variant/styles/indexStyle.css
@@ -24,8 +24,10 @@
 }
 #nameCompany1 {
 	font-size: clamp(36px, 3.5vw, 70px);
+	color: white;
 }
 #nameCompany2 {
+	color: white;
 	text-align: center;
 	width: 60%;
 	margin-top: 1%;
@@ -73,18 +75,19 @@
 	font-size:clamp(24px, 2vw, 40px);
 }
 .newInfo {
+	overflow: hidden;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-between;
 	width: 100%;
 	/* min-width: 280px; */
-	height: 3.5vw;
+	height: 10vw;
 	min-height: 3vh;
 	margin: 0 0 0 0;
 	font-size: clamp(14px, 1vw, 20px);
 	/*	box-shadow: 0px 1px 2px 0px black;*/
-	border-bottom: 3px solid black;
+	border-bottom: 2px solid black;
 }
 .newtext {
 	width: 90%;
@@ -96,17 +99,17 @@
 	align-items: center;
 	justify-content: space-evenly;
 	width: 10%;
-	height: 50%;
+	height: 25%;
 }
 .likebut {
 	width: 35%;
 	height: 100%;
-	border: 2px dashed black;
+
 }
 .morebut {
 	width: 35%;
 	height: 100%;
-	border: 2px dashed black;
+
 }
 .relations {
 	display: flex;
@@ -140,6 +143,13 @@
 	margin-left: 40%;
 }
 
+.swiper-button-next, .swiper-button-prev{
+    opacity: 0;
+    height: 200%;
+    width: 10%;
+    margin-top: -50%;
+}
+
 @media screen and (max-width: 1024px){
 .main {
 	display: flex;
@@ -167,8 +177,10 @@
 }
 #nameCompany1 {
 	font-size: clamp(36px, 3.5vw, 70px);
+	color: white;
 }
 #nameCompany2 {
+	color: white;
 	text-align: center;
 	width: 60%;
 	margin-top: 1%;
@@ -216,18 +228,19 @@
 	font-size:clamp(24px, 2vw, 40px);
 }
 .newInfo {
+	overflow: hidden;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-between;
 	width: 100%;
 	/* min-width: 280px; */
-	height: 3.5vw;
+	height: 10vw;
 	min-height: 3vh;
 	margin: 0 0 0 0;
 	font-size: clamp(14px, 1vw, 20px);
 	/*	box-shadow: 0px 1px 2px 0px black;*/
-	border-bottom: 3px solid black;
+	border-bottom: 1px solid black;
 }
 .newtext {
 	width: 90%;
@@ -239,17 +252,17 @@
 	align-items: center;
 	justify-content: space-evenly;
 	width: 10%;
-	height: 50%;
+	height: 25%;
 }
 .likebut {
-	width: 35%;
+	width: 50%;
 	height: 100%;
-	border: 2px dashed black;
+
 }
 .morebut {
-	width: 35%;
+	width: 50%;
 	height: 100%;
-	border: 2px dashed black;
+
 }
 .relations {
 	display: flex;
