--- a/HTML/Work2Variant/styles/infoStyle.css
+++ b/HTML/Work2Variant/styles/infoStyle.css
@@ -22,6 +22,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    height: 500px;
 }
 .nameCompany{
     display: flex;
@@ -70,7 +71,7 @@
 .soc{
     width: 9.5%;
     height: 50%;
-    border: 2px dashed black;
+		box-shadow: 0px 3px 2px #00000036;
 }
 
 @media screen and (max-width: 1080px){
@@ -79,7 +80,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    margin-top: 5%;
+    margin-top: 15%;
 }
 .container{
     display: flex;
@@ -96,6 +97,7 @@
     justify-content: center;
     width: 100%;
     min-width: 280px;
+    gap: 5%;
 }
 .nameCompany{
     display: flex;
@@ -128,7 +130,7 @@
     width: 100%;
     height: 10%;
     min-width: 280px;
-    margin-top:10%;
+    margin-top:20%;
 }
 .all{
     display: flex;
@@ -142,12 +144,12 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    width: 40%;
+    width: 20%;
     height: 100%;
 }
 .soc{
     width: 15%;
     height: 50%;
-    border: 2px dashed black;
+		box-shadow: 0px 3px 2px #00000036;
 }
 }
