modified:   Preprocessor_Page/index.html 	modified:   Preprocessor_Page/script.js 	modified:   Preprocessor_Page/style.css 	modified:   Preprocessor_Page/style.css.map 	modified:   Preprocessor_Page/style.scss

--- a/Preprocessor_Page/style.css
+++ b/Preprocessor_Page/style.css
@@ -68,26 +68,24 @@ header {
 
 .header-nav-button {
   display: flex;
-  transform: perspective(1px) translateZ(1);
-  transition-duration: 0.5s;
-  width: 17.5%;
-  justify-content: space-around;
+  width: 25%;
+  justify-content: center;
   align-items: center;
+  overflow: hidden;
+  position: relative;
 }
-.header-nav-button:hover {
-  transform: scale(1.2);
-  transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
-  background-color: orange;
+.header-nav-button svg rect {
+  fill: orange;
+  transition: fill 300ms ease-in-out;
 }
-.header-nav-button:active {
-  transform: scale(1.2);
-  transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
-  background-color: orange;
-}
-.header-nav-button:focus {
-  transform: scale(1.2);
-  transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
-  background-color: orange;
+.header-nav-button span {
+  display: inline-block;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin-top: 2px;
+  position: absolute;
+  white-space: nowrap;
 }
 
 main {
@@ -132,12 +130,11 @@ main {
 .swiper-wrapper {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .swiper-slide {
-  width: 33%;
-  min-width: 400px;
+  min-width: 33.33%;
   aspect-ratio: 9/16;
   height: 100%;
   overflow: hidden;
